@@ -25,7 +25,8 @@ urlpatterns = [
     path('', home, name='home'),
     path('404-page-not-found/', page_not_found, name="page-not-found"),
     path('signup/', SignUp.as_view(), name="signup"),
-    path('signin/', SignIn, name='signin'),
+    path('signin/', SignIn.as_view(), name='signin'),
+    path('o/', include('oauth2_provider.urls', namespace='oauth2_provider')),
     path('signout/', signout, name='signout'),
     path('dashboard/', include('dashboard.urls')),
     path('payment/', include('zarinpal.urls')),
