@@ -143,7 +143,7 @@
             <div class="card-title">
                 <h4>کلاس های امروز و فردای شما</h4>
             </div>
-            {% if no_class_today_text %}
+            {% if not classes %}
             <div class="shadow-lg container w-100 my-n2 text-center rounded" style="font-family: 'Vazir_Bold';">
                 <div class="col-md-12 mb-1">
                     <img class="m-auto" src="{% static 'home/images/icons/no-class.svg'%}" width="90" height="90">
